Phase3/inputparser.output
Terminals unused in grammar

   number_error
   Fake_id
   WhiteSpace


Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declarationList declaration
    3                | declaration

    4 declaration: varDeclaration
    5            | funDeclaration
    6            | recDeclaration

    7 recDeclaration: RECORD ID curly_brace_left localDeclarations curly_brace_right

    8 varDeclaration: typeSpecifier varDeclList semicolon

    9 scopedVarDeclaration: scopedTypeSpecifier varDeclList semicolon

   10 varDeclList: varDeclList comma varDeclInitialize
   11            | varDeclInitialize

   12 varDeclInitialize: varDeclId
   13                  | varDeclId colon simpleExpression

   14 varDeclId: ID
   15          | ID square_bracket_left NUMCONST square_bracket_right

   16 scopedTypeSpecifier: Static typeSpecifier
   17                    | typeSpecifier

   18 typeSpecifier: returnTypeSpecifier

   19 returnTypeSpecifier: INT
   20                    | REAL
   21                    | BOOL
   22                    | CHAR

   23 funDeclaration: typeSpecifier ID parenthesis_left params parenthesis_right statement
   24               | ID parenthesis_left params parenthesis_right statement

   25 params: paramList
   26       | /* empty */

   27 paramList: paramList semicolon paramTypeList
   28          | paramTypeList

   29 paramTypeList: typeSpecifier paramIdList

   30 paramIdList: paramIdList comma paramId
   31            | paramId

   32 paramId: ID
   33        | ID square_bracket_left square_bracket_right

   34 statement: expressionStmt
   35          | compoundStmt
   36          | selectionStmt
   37          | iterationStmt
   38          | returnStmt
   39          | breakStmt

   40 compoundStmt: curly_brace_left localDeclarations statementList curly_brace_right

   41 localDeclarations: localDeclarations scopedVarDeclaration
   42                  | empty

   43 statementList: statementList statement
   44              | /* empty */

   45 expressionStmt: expression semicolon
   46               | semicolon

   47 selectionStmt: IF parenthesis_left simpleExpression parenthesis_right statement
   48              | IF parenthesis_left simpleExpression parenthesis_right statement ELSE statement
   49              | SWITCH parenthesis_left simpleExpression parenthesis_right caseElement defaultElement END

   50 caseElement: CASE NUMCONST colon statement semicolon
   51            | caseElement CASE NUMCONST colon statement semicolon

   52 defaultElement: DEFAULT colon statement semicolon
   53               | /* empty */

   54 iterationStmt: WHILE parenthesis_left simpleExpression parenthesis_right statement

   55 returnStmt: RETURN semicolon
   56           | RETURN expression semicolon

   57 breakStmt: BREAK semicolon

   58 expression: mutable assignment expression
   59           | mutable plus_assign expression
   60           | mutable minus_assign expression
   61           | mutable multiply_assign expression
   62           | mutable divide_assign expression
   63           | mutable plus_plus
   64           | mutable minus_minus
   65           | simpleExpression

   66 simpleExpression: simpleExpression OR simpleExpression
   67                 | simpleExpression AND simpleExpression
   68                 | simpleExpression OR_ELSE simpleExpression
   69                 | simpleExpression AND_THEN simpleExpression
   70                 | NOT simpleExpression
   71                 | relExpression

   72 relExpression: mathlogicExpression relop mathlogicExpression
   73              | mathlogicExpression

   74 relop: less_equal
   75      | less_than
   76      | greater_than
   77      | greater_equal
   78      | equal
   79      | not_equal

   80 mathlogicExpression: mathlogicExpression plus mathlogicExpression
   81                    | mathlogicExpression minus mathlogicExpression
   82                    | mathlogicExpression multiply mathlogicExpression
   83                    | mathlogicExpression division mathlogicExpression
   84                    | mathlogicExpression modulo mathlogicExpression
   85                    | unaryExpression

   86 unaryExpression: unaryop unaryExpression
   87                | factor

   88 unaryop: minus
   89        | multiply
   90        | question_mark

   91 factor: immutable
   92       | mutable

   93 mutable: ID
   94        | mutable square_bracket_left expression square_bracket_right
   95        | mutable dot ID

   96 immutable: parenthesis_left expression parenthesis_right
   97          | call
   98          | constant

   99 call: ID parenthesis_left args parenthesis_right

  100 args: argList
  101     | /* empty */

  102 argList: argList comma expression
  103        | expression

  104 constant: NUMCONST
  105         | Real_const
  106         | CHARCONST
  107         | BoolConst

  108 empty: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
Real_const (258) 105
number_error (259)
BoolConst (260) 107
greater_than (261) 76
greater_equal (262) 77
not_equal (263) 79
equal (264) 78
less_equal (265) 74
less_than (266) 75
square_bracket_left (267) 15 33 94
square_bracket_right (268) 15 33 94
curly_brace_left (269) 7 40
curly_brace_right (270) 7 40
parenthesis_left (271) 23 24 47 48 49 54 96 99
parenthesis_right (272) 23 24 47 48 49 54 96 99
semicolon (273) 8 9 27 45 46 50 51 52 55 56 57
comma (274) 10 30 102
colon (275) 13 50 51 52
dot (276) 95
AND_THEN (277) 69
OR_ELSE (278) 68
OR (279) 66
AND (280) 67
NOT (281) 70
IF (282) 47 48
ELSE (283) 48
SWITCH (284) 49
END (285) 49
CASE (286) 50 51
DEFAULT (287) 52
WHILE (288) 54
RETURN (289) 55 56
BREAK (290) 57
RECORD (291) 7
Static (292) 16
INT (293) 19
REAL (294) 20
BOOL (295) 21
CHAR (296) 22
plus_assign (297) 59
minus_assign (298) 60
multiply_assign (299) 61
divide_assign (300) 62
question_mark (301) 90
modulo (302) 84
division (303) 83
multiply (304) 82 89
minus (305) 81 88
plus (306) 80
assignment (307) 58
NUMCONST (308) 15 50 51 104
ID (309) 7 14 15 23 24 32 33 93 95 99
Fake_id (310)
WhiteSpace (311)
CHARCONST (312) 106
THEN (313)
plus_plus (314) 63
minus_minus (315) 64


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
program (62)
    on left: 1, on right: 0
declarationList (63)
    on left: 2 3, on right: 1 2
declaration (64)
    on left: 4 5 6, on right: 2 3
recDeclaration (65)
    on left: 7, on right: 6
varDeclaration (66)
    on left: 8, on right: 4
scopedVarDeclaration (67)
    on left: 9, on right: 41
varDeclList (68)
    on left: 10 11, on right: 8 9 10
varDeclInitialize (69)
    on left: 12 13, on right: 10 11
varDeclId (70)
    on left: 14 15, on right: 12 13
scopedTypeSpecifier (71)
    on left: 16 17, on right: 9
typeSpecifier (72)
    on left: 18, on right: 8 16 17 23 29
returnTypeSpecifier (73)
    on left: 19 20 21 22, on right: 18
funDeclaration (74)
    on left: 23 24, on right: 5
params (75)
    on left: 25 26, on right: 23 24
paramList (76)
    on left: 27 28, on right: 25 27
paramTypeList (77)
    on left: 29, on right: 27 28
paramIdList (78)
    on left: 30 31, on right: 29 30
paramId (79)
    on left: 32 33, on right: 30 31
statement (80)
    on left: 34 35 36 37 38 39, on right: 23 24 43 47 48 50 51 52 54
compoundStmt (81)
    on left: 40, on right: 35
localDeclarations (82)
    on left: 41 42, on right: 7 40 41
statementList (83)
    on left: 43 44, on right: 40 43
expressionStmt (84)
    on left: 45 46, on right: 34
selectionStmt (85)
    on left: 47 48 49, on right: 36
caseElement (86)
    on left: 50 51, on right: 49 51
defaultElement (87)
    on left: 52 53, on right: 49
iterationStmt (88)
    on left: 54, on right: 37
returnStmt (89)
    on left: 55 56, on right: 38
breakStmt (90)
    on left: 57, on right: 39
expression (91)
    on left: 58 59 60 61 62 63 64 65, on right: 45 56 58 59 60 61 62
    94 96 102 103
simpleExpression (92)
    on left: 66 67 68 69 70 71, on right: 13 47 48 49 54 65 66 67 68
    69 70
relExpression (93)
    on left: 72 73, on right: 71
relop (94)
    on left: 74 75 76 77 78 79, on right: 72
mathlogicExpression (95)
    on left: 80 81 82 83 84 85, on right: 72 73 80 81 82 83 84
unaryExpression (96)
    on left: 86 87, on right: 85 86
unaryop (97)
    on left: 88 89 90, on right: 86
factor (98)
    on left: 91 92, on right: 87
mutable (99)
    on left: 93 94 95, on right: 58 59 60 61 62 63 64 92 94 95
immutable (100)
    on left: 96 97 98, on right: 91
call (101)
    on left: 99, on right: 97
args (102)
    on left: 100 101, on right: 99
argList (103)
    on left: 102 103, on right: 100 102
constant (104)
    on left: 104 105 106 107, on right: 98
empty (105)
    on left: 108, on right: 42


state 0

    0 $accept: . program $end

    RECORD  shift, and go to state 1
    INT     shift, and go to state 2
    REAL    shift, and go to state 3
    BOOL    shift, and go to state 4
    CHAR    shift, and go to state 5
    ID      shift, and go to state 6

    program              go to state 7
    declarationList      go to state 8
    declaration          go to state 9
    recDeclaration       go to state 10
    varDeclaration       go to state 11
    typeSpecifier        go to state 12
    returnTypeSpecifier  go to state 13
    funDeclaration       go to state 14


state 1

    7 recDeclaration: RECORD . ID curly_brace_left localDeclarations curly_brace_right

    ID  shift, and go to state 15


state 2

   19 returnTypeSpecifier: INT .

    $default  reduce using rule 19 (returnTypeSpecifier)


state 3

   20 returnTypeSpecifier: REAL .

    $default  reduce using rule 20 (returnTypeSpecifier)


state 4

   21 returnTypeSpecifier: BOOL .

    $default  reduce using rule 21 (returnTypeSpecifier)


state 5

   22 returnTypeSpecifier: CHAR .

    $default  reduce using rule 22 (returnTypeSpecifier)


state 6

   24 funDeclaration: ID . parenthesis_left params parenthesis_right statement

    parenthesis_left  shift, and go to state 16


state 7

    0 $accept: program . $end

    $end  shift, and go to state 17


state 8

    1 program: declarationList .
    2 declarationList: declarationList . declaration

    RECORD  shift, and go to state 1
    INT     shift, and go to state 2
    REAL    shift, and go to state 3
    BOOL    shift, and go to state 4
    CHAR    shift, and go to state 5
    ID      shift, and go to state 6

    $default  reduce using rule 1 (program)

    declaration          go to state 18
    recDeclaration       go to state 10
    varDeclaration       go to state 11
    typeSpecifier        go to state 12
    returnTypeSpecifier  go to state 13
    funDeclaration       go to state 14


state 9

    3 declarationList: declaration .

    $default  reduce using rule 3 (declarationList)


state 10

    6 declaration: recDeclaration .

    $default  reduce using rule 6 (declaration)


state 11

    4 declaration: varDeclaration .

    $default  reduce using rule 4 (declaration)


state 12

    8 varDeclaration: typeSpecifier . varDeclList semicolon
   23 funDeclaration: typeSpecifier . ID parenthesis_left params parenthesis_right statement

    ID  shift, and go to state 19

    varDeclList        go to state 20
    varDeclInitialize  go to state 21
    varDeclId          go to state 22


state 13

   18 typeSpecifier: returnTypeSpecifier .

    $default  reduce using rule 18 (typeSpecifier)


state 14

    5 declaration: funDeclaration .

    $default  reduce using rule 5 (declaration)


state 15

    7 recDeclaration: RECORD ID . curly_brace_left localDeclarations curly_brace_right

    curly_brace_left  shift, and go to state 23


state 16

   24 funDeclaration: ID parenthesis_left . params parenthesis_right statement

    INT   shift, and go to state 2
    REAL  shift, and go to state 3
    BOOL  shift, and go to state 4
    CHAR  shift, and go to state 5

    $default  reduce using rule 26 (params)

    typeSpecifier        go to state 24
    returnTypeSpecifier  go to state 13
    params               go to state 25
    paramList            go to state 26
    paramTypeList        go to state 27


state 17

    0 $accept: program $end .

    $default  accept


state 18

    2 declarationList: declarationList declaration .

    $default  reduce using rule 2 (declarationList)


state 19

   14 varDeclId: ID .
   15          | ID . square_bracket_left NUMCONST square_bracket_right
   23 funDeclaration: typeSpecifier ID . parenthesis_left params parenthesis_right statement

    square_bracket_left  shift, and go to state 28
    parenthesis_left     shift, and go to state 29

    $default  reduce using rule 14 (varDeclId)


state 20

    8 varDeclaration: typeSpecifier varDeclList . semicolon
   10 varDeclList: varDeclList . comma varDeclInitialize

    semicolon  shift, and go to state 30
    comma      shift, and go to state 31


state 21

   11 varDeclList: varDeclInitialize .

    $default  reduce using rule 11 (varDeclList)


state 22

   12 varDeclInitialize: varDeclId .
   13                  | varDeclId . colon simpleExpression

    colon  shift, and go to state 32

    $default  reduce using rule 12 (varDeclInitialize)


state 23

    7 recDeclaration: RECORD ID curly_brace_left . localDeclarations curly_brace_right

    $default  reduce using rule 108 (empty)

    localDeclarations  go to state 33
    empty              go to state 34


state 24

   29 paramTypeList: typeSpecifier . paramIdList

    ID  shift, and go to state 35

    paramIdList  go to state 36
    paramId      go to state 37


state 25

   24 funDeclaration: ID parenthesis_left params . parenthesis_right statement

    parenthesis_right  shift, and go to state 38


state 26

   25 params: paramList .
   27 paramList: paramList . semicolon paramTypeList

    semicolon  shift, and go to state 39

    $default  reduce using rule 25 (params)


state 27

   28 paramList: paramTypeList .

    $default  reduce using rule 28 (paramList)


state 28

   15 varDeclId: ID square_bracket_left . NUMCONST square_bracket_right

    NUMCONST  shift, and go to state 40


state 29

   23 funDeclaration: typeSpecifier ID parenthesis_left . params parenthesis_right statement

    INT   shift, and go to state 2
    REAL  shift, and go to state 3
    BOOL  shift, and go to state 4
    CHAR  shift, and go to state 5

    $default  reduce using rule 26 (params)

    typeSpecifier        go to state 24
    returnTypeSpecifier  go to state 13
    params               go to state 41
    paramList            go to state 26
    paramTypeList        go to state 27


state 30

    8 varDeclaration: typeSpecifier varDeclList semicolon .

    $default  reduce using rule 8 (varDeclaration)


state 31

   10 varDeclList: varDeclList comma . varDeclInitialize

    ID  shift, and go to state 42

    varDeclInitialize  go to state 43
    varDeclId          go to state 22


state 32

   13 varDeclInitialize: varDeclId colon . simpleExpression

    Real_const        shift, and go to state 44
    BoolConst         shift, and go to state 45
    parenthesis_left  shift, and go to state 46
    NOT               shift, and go to state 47
    question_mark     shift, and go to state 48
    multiply          shift, and go to state 49
    minus             shift, and go to state 50
    NUMCONST          shift, and go to state 51
    ID                shift, and go to state 52
    CHARCONST         shift, and go to state 53

    simpleExpression     go to state 54
    relExpression        go to state 55
    mathlogicExpression  go to state 56
    unaryExpression      go to state 57
    unaryop              go to state 58
    factor               go to state 59
    mutable              go to state 60
    immutable            go to state 61
    call                 go to state 62
    constant             go to state 63


state 33

    7 recDeclaration: RECORD ID curly_brace_left localDeclarations . curly_brace_right
   41 localDeclarations: localDeclarations . scopedVarDeclaration

    curly_brace_right  shift, and go to state 64
    Static             shift, and go to state 65
    INT                shift, and go to state 2
    REAL               shift, and go to state 3
    BOOL               shift, and go to state 4
    CHAR               shift, and go to state 5

    scopedVarDeclaration  go to state 66
    scopedTypeSpecifier   go to state 67
    typeSpecifier         go to state 68
    returnTypeSpecifier   go to state 13


state 34

   42 localDeclarations: empty .

    $default  reduce using rule 42 (localDeclarations)


state 35

   32 paramId: ID .
   33        | ID . square_bracket_left square_bracket_right

    square_bracket_left  shift, and go to state 69

    $default  reduce using rule 32 (paramId)


state 36

   29 paramTypeList: typeSpecifier paramIdList .
   30 paramIdList: paramIdList . comma paramId

    comma  shift, and go to state 70

    $default  reduce using rule 29 (paramTypeList)


state 37

   31 paramIdList: paramId .

    $default  reduce using rule 31 (paramIdList)


state 38

   24 funDeclaration: ID parenthesis_left params parenthesis_right . statement

    Real_const        shift, and go to state 44
    BoolConst         shift, and go to state 45
    curly_brace_left  shift, and go to state 71
    parenthesis_left  shift, and go to state 46
    semicolon         shift, and go to state 72
    NOT               shift, and go to state 47
    IF                shift, and go to state 73
    SWITCH            shift, and go to state 74
    WHILE             shift, and go to state 75
    RETURN            shift, and go to state 76
    BREAK             shift, and go to state 77
    question_mark     shift, and go to state 48
    multiply          shift, and go to state 49
    minus             shift, and go to state 50
    NUMCONST          shift, and go to state 51
    ID                shift, and go to state 52
    CHARCONST         shift, and go to state 53

    statement            go to state 78
    compoundStmt         go to state 79
    expressionStmt       go to state 80
    selectionStmt        go to state 81
    iterationStmt        go to state 82
    returnStmt           go to state 83
    breakStmt            go to state 84
    expression           go to state 85
    simpleExpression     go to state 86
    relExpression        go to state 55
    mathlogicExpression  go to state 56
    unaryExpression      go to state 57
    unaryop              go to state 58
    factor               go to state 59
    mutable              go to state 87
    immutable            go to state 61
    call                 go to state 62
    constant             go to state 63


state 39

   27 paramList: paramList semicolon . paramTypeList

    INT   shift, and go to state 2
    REAL  shift, and go to state 3
    BOOL  shift, and go to state 4
    CHAR  shift, and go to state 5

    typeSpecifier        go to state 24
    returnTypeSpecifier  go to state 13
    paramTypeList        go to state 88


state 40

   15 varDeclId: ID square_bracket_left NUMCONST . square_bracket_right

    square_bracket_right  shift, and go to state 89


state 41

   23 funDeclaration: typeSpecifier ID parenthesis_left params . parenthesis_right statement

    parenthesis_right  shift, and go to state 90


state 42

   14 varDeclId: ID .
   15          | ID . square_bracket_left NUMCONST square_bracket_right

    square_bracket_left  shift, and go to state 28

    $default  reduce using rule 14 (varDeclId)


state 43

   10 varDeclList: varDeclList comma varDeclInitialize .

    $default  reduce using rule 10 (varDeclList)


state 44

  105 constant: Real_const .

    $default  reduce using rule 105 (constant)


state 45

  107 constant: BoolConst .

    $default  reduce using rule 107 (constant)


state 46

   96 immutable: parenthesis_left . expression parenthesis_right

    Real_const        shift, and go to state 44
    BoolConst         shift, and go to state 45
    parenthesis_left  shift, and go to state 46
    NOT               shift, and go to state 47
    question_mark     shift, and go to state 48
    multiply          shift, and go to state 49
    minus             shift, and go to state 50
    NUMCONST          shift, and go to state 51
    ID                shift, and go to state 52
    CHARCONST         shift, and go to state 53

    expression           go to state 91
    simpleExpression     go to state 86
    relExpression        go to state 55
    mathlogicExpression  go to state 56
    unaryExpression      go to state 57
    unaryop              go to state 58
    factor               go to state 59
    mutable              go to state 87
    immutable            go to state 61
    call                 go to state 62
    constant             go to state 63


state 47

   70 simpleExpression: NOT . simpleExpression

    Real_const        shift, and go to state 44
    BoolConst         shift, and go to state 45
    parenthesis_left  shift, and go to state 46
    NOT               shift, and go to state 47
    question_mark     shift, and go to state 48
    multiply          shift, and go to state 49
    minus             shift, and go to state 50
    NUMCONST          shift, and go to state 51
    ID                shift, and go to state 52
    CHARCONST         shift, and go to state 53

    simpleExpression     go to state 92
    relExpression        go to state 55
    mathlogicExpression  go to state 56
    unaryExpression      go to state 57
    unaryop              go to state 58
    factor               go to state 59
    mutable              go to state 60
    immutable            go to state 61
    call                 go to state 62
    constant             go to state 63


state 48

   90 unaryop: question_mark .

    $default  reduce using rule 90 (unaryop)


state 49

   89 unaryop: multiply .

    $default  reduce using rule 89 (unaryop)


state 50

   88 unaryop: minus .

    $default  reduce using rule 88 (unaryop)


state 51

  104 constant: NUMCONST .

    $default  reduce using rule 104 (constant)


state 52

   93 mutable: ID .
   99 call: ID . parenthesis_left args parenthesis_right

    parenthesis_left  shift, and go to state 93

    $default  reduce using rule 93 (mutable)


state 53

  106 constant: CHARCONST .

    $default  reduce using rule 106 (constant)


state 54

   13 varDeclInitialize: varDeclId colon simpleExpression .
   66 simpleExpression: simpleExpression . OR simpleExpression
   67                 | simpleExpression . AND simpleExpression
   68                 | simpleExpression . OR_ELSE simpleExpression
   69                 | simpleExpression . AND_THEN simpleExpression

    AND_THEN  shift, and go to state 94
    OR_ELSE   shift, and go to state 95
    OR        shift, and go to state 96
    AND       shift, and go to state 97

    $default  reduce using rule 13 (varDeclInitialize)


state 55

   71 simpleExpression: relExpression .

    $default  reduce using rule 71 (simpleExpression)


state 56

   72 relExpression: mathlogicExpression . relop mathlogicExpression
   73              | mathlogicExpression .
   80 mathlogicExpression: mathlogicExpression . plus mathlogicExpression
   81                    | mathlogicExpression . minus mathlogicExpression
   82                    | mathlogicExpression . multiply mathlogicExpression
   83                    | mathlogicExpression . division mathlogicExpression
   84                    | mathlogicExpression . modulo mathlogicExpression

    greater_than   shift, and go to state 98
    greater_equal  shift, and go to state 99
    not_equal      shift, and go to state 100
    equal          shift, and go to state 101
    less_equal     shift, and go to state 102
    less_than      shift, and go to state 103
    modulo         shift, and go to state 104
    division       shift, and go to state 105
    multiply       shift, and go to state 106
    minus          shift, and go to state 107
    plus           shift, and go to state 108

    $default  reduce using rule 73 (relExpression)

    relop  go to state 109


state 57

   85 mathlogicExpression: unaryExpression .

    $default  reduce using rule 85 (mathlogicExpression)


state 58

   86 unaryExpression: unaryop . unaryExpression

    Real_const        shift, and go to state 44
    BoolConst         shift, and go to state 45
    parenthesis_left  shift, and go to state 46
    question_mark     shift, and go to state 48
    multiply          shift, and go to state 49
    minus             shift, and go to state 50
    NUMCONST          shift, and go to state 51
    ID                shift, and go to state 52
    CHARCONST         shift, and go to state 53

    unaryExpression  go to state 110
    unaryop          go to state 58
    factor           go to state 59
    mutable          go to state 60
    immutable        go to state 61
    call             go to state 62
    constant         go to state 63


state 59

   87 unaryExpression: factor .

    $default  reduce using rule 87 (unaryExpression)


state 60

   92 factor: mutable .
   94 mutable: mutable . square_bracket_left expression square_bracket_right
   95        | mutable . dot ID

    square_bracket_left  shift, and go to state 111
    dot                  shift, and go to state 112

    $default  reduce using rule 92 (factor)


state 61

   91 factor: immutable .

    $default  reduce using rule 91 (factor)


state 62

   97 immutable: call .

    $default  reduce using rule 97 (immutable)


state 63

   98 immutable: constant .

    $default  reduce using rule 98 (immutable)


state 64

    7 recDeclaration: RECORD ID curly_brace_left localDeclarations curly_brace_right .

    $default  reduce using rule 7 (recDeclaration)


state 65

   16 scopedTypeSpecifier: Static . typeSpecifier

    INT   shift, and go to state 2
    REAL  shift, and go to state 3
    BOOL  shift, and go to state 4
    CHAR  shift, and go to state 5

    typeSpecifier        go to state 113
    returnTypeSpecifier  go to state 13


state 66

   41 localDeclarations: localDeclarations scopedVarDeclaration .

    $default  reduce using rule 41 (localDeclarations)


state 67

    9 scopedVarDeclaration: scopedTypeSpecifier . varDeclList semicolon

    ID  shift, and go to state 42

    varDeclList        go to state 114
    varDeclInitialize  go to state 21
    varDeclId          go to state 22


state 68

   17 scopedTypeSpecifier: typeSpecifier .

    $default  reduce using rule 17 (scopedTypeSpecifier)


state 69

   33 paramId: ID square_bracket_left . square_bracket_right

    square_bracket_right  shift, and go to state 115


state 70

   30 paramIdList: paramIdList comma . paramId

    ID  shift, and go to state 35

    paramId  go to state 116


state 71

   40 compoundStmt: curly_brace_left . localDeclarations statementList curly_brace_right

    $default  reduce using rule 108 (empty)

    localDeclarations  go to state 117
    empty              go to state 34


state 72

   46 expressionStmt: semicolon .

    $default  reduce using rule 46 (expressionStmt)


state 73

   47 selectionStmt: IF . parenthesis_left simpleExpression parenthesis_right statement
   48              | IF . parenthesis_left simpleExpression parenthesis_right statement ELSE statement

    parenthesis_left  shift, and go to state 118


state 74

   49 selectionStmt: SWITCH . parenthesis_left simpleExpression parenthesis_right caseElement defaultElement END

    parenthesis_left  shift, and go to state 119


state 75

   54 iterationStmt: WHILE . parenthesis_left simpleExpression parenthesis_right statement

    parenthesis_left  shift, and go to state 120


state 76

   55 returnStmt: RETURN . semicolon
   56           | RETURN . expression semicolon

    Real_const        shift, and go to state 44
    BoolConst         shift, and go to state 45
    parenthesis_left  shift, and go to state 46
    semicolon         shift, and go to state 121
    NOT               shift, and go to state 47
    question_mark     shift, and go to state 48
    multiply          shift, and go to state 49
    minus             shift, and go to state 50
    NUMCONST          shift, and go to state 51
    ID                shift, and go to state 52
    CHARCONST         shift, and go to state 53

    expression           go to state 122
    simpleExpression     go to state 86
    relExpression        go to state 55
    mathlogicExpression  go to state 56
    unaryExpression      go to state 57
    unaryop              go to state 58
    factor               go to state 59
    mutable              go to state 87
    immutable            go to state 61
    call                 go to state 62
    constant             go to state 63


state 77

   57 breakStmt: BREAK . semicolon

    semicolon  shift, and go to state 123


state 78

   24 funDeclaration: ID parenthesis_left params parenthesis_right statement .

    $default  reduce using rule 24 (funDeclaration)


state 79

   35 statement: compoundStmt .

    $default  reduce using rule 35 (statement)


state 80

   34 statement: expressionStmt .

    $default  reduce using rule 34 (statement)


state 81

   36 statement: selectionStmt .

    $default  reduce using rule 36 (statement)


state 82

   37 statement: iterationStmt .

    $default  reduce using rule 37 (statement)


state 83

   38 statement: returnStmt .

    $default  reduce using rule 38 (statement)


state 84

   39 statement: breakStmt .

    $default  reduce using rule 39 (statement)


state 85

   45 expressionStmt: expression . semicolon

    semicolon  shift, and go to state 124


state 86

   65 expression: simpleExpression .
   66 simpleExpression: simpleExpression . OR simpleExpression
   67                 | simpleExpression . AND simpleExpression
   68                 | simpleExpression . OR_ELSE simpleExpression
   69                 | simpleExpression . AND_THEN simpleExpression

    AND_THEN  shift, and go to state 94
    OR_ELSE   shift, and go to state 95
    OR        shift, and go to state 96
    AND       shift, and go to state 97

    $default  reduce using rule 65 (expression)


state 87

   58 expression: mutable . assignment expression
   59           | mutable . plus_assign expression
   60           | mutable . minus_assign expression
   61           | mutable . multiply_assign expression
   62           | mutable . divide_assign expression
   63           | mutable . plus_plus
   64           | mutable . minus_minus
   92 factor: mutable .
   94 mutable: mutable . square_bracket_left expression square_bracket_right
   95        | mutable . dot ID

    square_bracket_left  shift, and go to state 111
    dot                  shift, and go to state 112
    plus_assign          shift, and go to state 125
    minus_assign         shift, and go to state 126
    multiply_assign      shift, and go to state 127
    divide_assign        shift, and go to state 128
    assignment           shift, and go to state 129
    plus_plus            shift, and go to state 130
    minus_minus          shift, and go to state 131

    $default  reduce using rule 92 (factor)


state 88

   27 paramList: paramList semicolon paramTypeList .

    $default  reduce using rule 27 (paramList)


state 89

   15 varDeclId: ID square_bracket_left NUMCONST square_bracket_right .

    $default  reduce using rule 15 (varDeclId)


state 90

   23 funDeclaration: typeSpecifier ID parenthesis_left params parenthesis_right . statement

    Real_const        shift, and go to state 44
    BoolConst         shift, and go to state 45
    curly_brace_left  shift, and go to state 71
    parenthesis_left  shift, and go to state 46
    semicolon         shift, and go to state 72
    NOT               shift, and go to state 47
    IF                shift, and go to state 73
    SWITCH            shift, and go to state 74
    WHILE             shift, and go to state 75
    RETURN            shift, and go to state 76
    BREAK             shift, and go to state 77
    question_mark     shift, and go to state 48
    multiply          shift, and go to state 49
    minus             shift, and go to state 50
    NUMCONST          shift, and go to state 51
    ID                shift, and go to state 52
    CHARCONST         shift, and go to state 53

    statement            go to state 132
    compoundStmt         go to state 79
    expressionStmt       go to state 80
    selectionStmt        go to state 81
    iterationStmt        go to state 82
    returnStmt           go to state 83
    breakStmt            go to state 84
    expression           go to state 85
    simpleExpression     go to state 86
    relExpression        go to state 55
    mathlogicExpression  go to state 56
    unaryExpression      go to state 57
    unaryop              go to state 58
    factor               go to state 59
    mutable              go to state 87
    immutable            go to state 61
    call                 go to state 62
    constant             go to state 63


state 91

   96 immutable: parenthesis_left expression . parenthesis_right

    parenthesis_right  shift, and go to state 133


state 92

   66 simpleExpression: simpleExpression . OR simpleExpression
   67                 | simpleExpression . AND simpleExpression
   68                 | simpleExpression . OR_ELSE simpleExpression
   69                 | simpleExpression . AND_THEN simpleExpression
   70                 | NOT simpleExpression .

    $default  reduce using rule 70 (simpleExpression)


state 93

   99 call: ID parenthesis_left . args parenthesis_right

    Real_const        shift, and go to state 44
    BoolConst         shift, and go to state 45
    parenthesis_left  shift, and go to state 46
    NOT               shift, and go to state 47
    question_mark     shift, and go to state 48
    multiply          shift, and go to state 49
    minus             shift, and go to state 50
    NUMCONST          shift, and go to state 51
    ID                shift, and go to state 52
    CHARCONST         shift, and go to state 53

    $default  reduce using rule 101 (args)

    expression           go to state 134
    simpleExpression     go to state 86
    relExpression        go to state 55
    mathlogicExpression  go to state 56
    unaryExpression      go to state 57
    unaryop              go to state 58
    factor               go to state 59
    mutable              go to state 87
    immutable            go to state 61
    call                 go to state 62
    args                 go to state 135
    argList              go to state 136
    constant             go to state 63


state 94

   69 simpleExpression: simpleExpression AND_THEN . simpleExpression

    Real_const        shift, and go to state 44
    BoolConst         shift, and go to state 45
    parenthesis_left  shift, and go to state 46
    NOT               shift, and go to state 47
    question_mark     shift, and go to state 48
    multiply          shift, and go to state 49
    minus             shift, and go to state 50
    NUMCONST          shift, and go to state 51
    ID                shift, and go to state 52
    CHARCONST         shift, and go to state 53

    simpleExpression     go to state 137
    relExpression        go to state 55
    mathlogicExpression  go to state 56
    unaryExpression      go to state 57
    unaryop              go to state 58
    factor               go to state 59
    mutable              go to state 60
    immutable            go to state 61
    call                 go to state 62
    constant             go to state 63


state 95

   68 simpleExpression: simpleExpression OR_ELSE . simpleExpression

    Real_const        shift, and go to state 44
    BoolConst         shift, and go to state 45
    parenthesis_left  shift, and go to state 46
    NOT               shift, and go to state 47
    question_mark     shift, and go to state 48
    multiply          shift, and go to state 49
    minus             shift, and go to state 50
    NUMCONST          shift, and go to state 51
    ID                shift, and go to state 52
    CHARCONST         shift, and go to state 53

    simpleExpression     go to state 138
    relExpression        go to state 55
    mathlogicExpression  go to state 56
    unaryExpression      go to state 57
    unaryop              go to state 58
    factor               go to state 59
    mutable              go to state 60
    immutable            go to state 61
    call                 go to state 62
    constant             go to state 63


state 96

   66 simpleExpression: simpleExpression OR . simpleExpression

    Real_const        shift, and go to state 44
    BoolConst         shift, and go to state 45
    parenthesis_left  shift, and go to state 46
    NOT               shift, and go to state 47
    question_mark     shift, and go to state 48
    multiply          shift, and go to state 49
    minus             shift, and go to state 50
    NUMCONST          shift, and go to state 51
    ID                shift, and go to state 52
    CHARCONST         shift, and go to state 53

    simpleExpression     go to state 139
    relExpression        go to state 55
    mathlogicExpression  go to state 56
    unaryExpression      go to state 57
    unaryop              go to state 58
    factor               go to state 59
    mutable              go to state 60
    immutable            go to state 61
    call                 go to state 62
    constant             go to state 63


state 97

   67 simpleExpression: simpleExpression AND . simpleExpression

    Real_const        shift, and go to state 44
    BoolConst         shift, and go to state 45
    parenthesis_left  shift, and go to state 46
    NOT               shift, and go to state 47
    question_mark     shift, and go to state 48
    multiply          shift, and go to state 49
    minus             shift, and go to state 50
    NUMCONST          shift, and go to state 51
    ID                shift, and go to state 52
    CHARCONST         shift, and go to state 53

    simpleExpression     go to state 140
    relExpression        go to state 55
    mathlogicExpression  go to state 56
    unaryExpression      go to state 57
    unaryop              go to state 58
    factor               go to state 59
    mutable              go to state 60
    immutable            go to state 61
    call                 go to state 62
    constant             go to state 63


state 98

   76 relop: greater_than .

    $default  reduce using rule 76 (relop)


state 99

   77 relop: greater_equal .

    $default  reduce using rule 77 (relop)


state 100

   79 relop: not_equal .

    $default  reduce using rule 79 (relop)


state 101

   78 relop: equal .

    $default  reduce using rule 78 (relop)


state 102

   74 relop: less_equal .

    $default  reduce using rule 74 (relop)


state 103

   75 relop: less_than .

    $default  reduce using rule 75 (relop)


state 104

   84 mathlogicExpression: mathlogicExpression modulo . mathlogicExpression
